// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelViewerLeaf > should render ModelViewerLeaf 1`] = `
<span
  class="_tc-model-leaf_fc7435 tc-model-leaf"
>
  <button
    aria-label="Select myDataKey ($)"
    class="_tc-model-leaf-button_fc7435 tc-model-leaf-button"
    data-testid="model-leaf-button"
    title="toto"
  />
  <span
    class="_tc-simple-text_5c4f92 tc-simple-text"
  >
    <span
      class="_tc-simple-text-key_5c4f92 tc-simple-text-key"
    >
      toto
       
    </span>
  </span>
  <span
    class="_tc-model-leaf-options_fc7435 tc-model-leaf-options"
  />
</span>
`;

exports[`ModelViewerLeaf should render ModelViewerLeaf 1`] = `
<span
  class="theme-tc-model-leaf tc-model-leaf"
>
  <button
    aria-label="Select myDataKey ($)"
    class="theme-tc-model-leaf-button tc-model-leaf-button"
    data-testid="model-leaf-button"
    title="toto"
  />
  <span
    class="theme-tc-simple-text tc-simple-text"
  >
    <span
      class="theme-tc-simple-text-key tc-simple-text-key"
    >
      toto
       
    </span>
  </span>
  <span
    class="theme-tc-model-leaf-options tc-model-leaf-options"
  />
</span>
`;
